Import of JHALLOCK/Storm-0.240 from CPAN.
gitpan-cpan-distribution: Storm
gitpan-cpan-version:      0.240
gitpan-cpan-path:         JHALLOCK/Storm-0.240.tar.gz
gitpan-cpan-author:       JHALLOCK
gitpan-cpan-maturity:     released

--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Storm
 author  = Jeffrey Ray Hallock <jeffrey.hallock@gmail.com>
 license = Artistic_2_0
 copyright_holder = Jeffrey Ray Hallock
-
+version = 0.240
 [GatherDir]
 
 [MetaYAML]
@@ -30,16 +30,12 @@ MooseX::Types = 0
 
 [ConfirmRelease]
 
-[Git::NextVersion]
 
 [NextRelease]
 format = %-9v %{yyyy-MM-dd HH:mm:ss}d
 
 [PkgVersion]
 
-[Git::Commit]
-
-[Git::Tag]
 
 [UploadToCPAN]
 
